// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expense summary should be displayed correctly for list with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       
      expenses
       totaling 
      <span>
        $4.30
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
         Add Expense 
      </Link>
    </div>
  </div>
</div>
`;

exports[`expense summary should be displayed correctly for list with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $4.30
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
         Add Expense 
      </Link>
    </div>
  </div>
</div>
`;
